[gd_scene load_steps=7 format=3 uid="uid://c3aix84rpeho7"]

[ext_resource type="Texture2D" uid="uid://duwupsylpay6q" path="res://graphics/enemies/scout.png" id="1_5dn30"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_31njy"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_uef6p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h1hvq"]
shader = ExtResource("2_uef6p")
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t50qh"]
radius = 48.5077

[sub_resource type="CircleShape2D" id="CircleShape2D_ecibx"]
radius = 926.091

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_31njy")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_h1hvq")
position = Vector2(38, 27)
rotation = 1.5708
texture = ExtResource("1_5dn30")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t50qh")

[node name="AttachArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttachArea"]
visible = false
shape = SubResource("CircleShape2D_ecibx")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="RightLaser" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(120, 11)

[node name="LeftLaser" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(111, -27)

[node name="Timers" type="Node" parent="."]

[node name="InvulnerableTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="LaserCooldown" type="Timer" parent="Timers"]

[connection signal="body_entered" from="AttachArea" to="." method="_on_attach_area_body_entered"]
[connection signal="body_exited" from="AttachArea" to="." method="_on_attach_area_body_exited"]
[connection signal="timeout" from="Timers/InvulnerableTimer" to="." method="_on_invulnerable_timer_timeout"]
[connection signal="timeout" from="Timers/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
